--- a/static/package.json
+++ b/static/package.json
@@ -9,15 +9,7 @@
   "author": "william widmer",
   "license": "ISC",
   "dependencies": {
-    "react": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "react": "^16.2.0"
   },
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "webpack": "^3.10.0"
-  }
+  "devDependencies": {}
 }
